--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,14 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Seb Los blog
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I am a young coder who blogs about my IT lessons
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
+avatar: https://s-media-cache-ak0.pinimg.com/736x/d8/55/1e/d8551eb639032173dd3543fce098b40c.jpg
+Flags below are optional
 #
 
 # Includes an icon in the footer for each username you enter
@@ -22,7 +20,7 @@ footer-links:
   facebook:
   flickr:
   github: barryclark/jekyll-now
-  instagram:
+  instagram: seb.los_13
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
