--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ footer-links:
   instagram: seb.los_13
   linkedin:
   pinterest:
+  snapchat: seb.los
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
