--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Seb Los blog
 description: I am a young coder who blogs about my IT lessons
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://s-media-cache-ak0.pinimg.com/736x/d8/55/1e/d8551eb639032173dd3543fce098b40c.jpg
-
+avatar: http://www.harderbloggerfaster.com/wp-content/uploads/2015/03/avatars-000092617094-wqopwl-t500x500-300x300.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
