--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Seb Los blog
 description: I am a young coder who blogs about my IT lessons
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://www.harderbloggerfaster.com/wp-content/uploads/2015/03/avatars-000092617094-wqopwl-t500x500-300x300.jpg
+avatar: https://cdn3.macworld.co.uk/cmsdata/features/3618268/Apple-Music-Logo_thumb800.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
